# obsidian-rag

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements-bloated.txt  requirements.txt
docs/: data_provenance.md  experiment_log.md  model_card.md
docs/plans/: 2026-03-02-day3-implementation.md  2026-03-02-day3-query-engine-design.md
src/: api.py  config.py  ingest.py  logging_config.py  query.py
src/prompts/: system_v1.txt
test_vault/: notes.md  technical.md
tests/: test_api.py  test_config.py  test_ingest.py  test_logging_config.py  test_query.py
